compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/defaults.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER

class <!CONFLICTING_JVM_DECLARATIONS!>C<!> {
    <!CONFLICTING_JVM_DECLARATIONS!>fun `a$default`(c: C, x: Int, m: Int)<!> {}
    fun a(x: Int = 1) {}
}